- Fix style pages - Adding print button for service order voucher - Alter visibility of fields Problema Encontrado e Serviço Executado

--- a/service-order/src/main/webapp/css/estilo.css
+++ b/service-order/src/main/webapp/css/estilo.css
@@ -46,3 +46,18 @@
 	position: absolute;
 	right: 0;
 }
+
+@media print{
+	.menu{display: none;}
+	.imprimir{display: none;}
+}
+
+#formulario\:tabelaOs td[colspan="4"]{
+	text-align: center;
+}
+
+.panelGrid-semBorda tr,
+.panelGrid-semBorda td{
+	border: none !important;
+	vertical-align: middle;
+}
